# internal/models/client-user-schema.go
@@ -1,12 +1,10 @@
 package models
 
 // ClientUser represents a user in the client
-type ClientUser struct {
-	AdminUser
-}
+type ClientUser = AdminUser
 
 // CreateClientUser represents the request payload for user creation
 type CreateClientUser struct {
 	CreateUser
-	ClientID uint `json:"client_id" binding:"required" example:"1"`
+	ClientID uint `json:"client_id" binding:"required" example:"0"`
 }
